<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headerUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="64dp"
        android:text="@string/tv_user_letStart"
        android:textColor="#fff"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed" />

    <EditText
        android:id="@+id/etWhatsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:hint="@string/tv_whats_your_name"
        android:fontFamily="sans-serif-condensed"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_purple"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/button_save" />

</RelativeLayout>