<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_inclusive"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_all_inclusive" />

        <ImageView
            android:id="@+id/iv_happy"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_happy" />

        <ImageView
            android:id="@+id/iv_sunny"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_sunny" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tv_hi"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_motivation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tv_phrase_motivation"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <View
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_below="@+id/tv_motivation"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:backgroundTint="@color/dark_purple"
        android:elevation="5dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/dark_purple"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/button_nova_frase" />


</RelativeLayout>